<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAqua"
    tools:context="com.example.amin_elhasan.resume1.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/portrait" />

    <Button
        android:id="@+id/buttonWorkExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTomato"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="18dp"
        android:text="@string/work" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="match_parent"
        android:background="@color/colorTomato"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="18dp"
        android:text="@string/call" />

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTomato"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="18dp"
        android:text="@string/Email" />

    <Button
        android:id="@+id/buttonEducation"
        android:layout_width="match_parent"
        android:background="@color/colorTomato"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="18dp"
        android:text="@string/Education" />

</LinearLayout>
